[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameScenes/Game.gd" type="Script" id=2]
[ext_resource path="res://RuneTablet/RuneTablet.tscn" type="PackedScene" id=3]
[ext_resource path="res://DungeonGeneration/Room.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/ProgressBars/Mana_Icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/ProgressBars/Under.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/ProgressBars/HealthIcon.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/ProgressBars/Over.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/ProgressBars/ProgressHealth.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/ProgressBars/ProgressMana.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Frames/Frame_Everything.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Frames/Frame_Game.png" type="Texture" id=12]

[sub_resource type="VisualShaderNodeInput" id=1]
input_name = "screen_texture"

[sub_resource type="VisualShaderNodeInput" id=2]
input_name = "screen_uv"

[sub_resource type="VisualShaderNodeTexture" id=3]
source = 1

[sub_resource type="VisualShader" id=4]
code = "shader_type spatial;
render_mode specular_schlick_ggx, async_visible;




void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0 = vec3(SCREEN_UV, 0.0);

// Input:2

// Texture:4
	vec3 n_out4p0;
	float n_out4p1;
	{
		vec4 _tex_read = textureLod(SCREEN_TEXTURE, n_out3p0.xy, 0.0);
		n_out4p0 = _tex_read.rgb;
		n_out4p1 = _tex_read.a;
	}

// Output:0
	ALBEDO = n_out4p0;
	EMISSION = n_out4p0;
	NORMAL = n_out4p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 1115.56, 559.913 )
nodes/fragment/0/position = Vector2( 920, 200 )
nodes/fragment/2/node = SubResource( 1 )
nodes/fragment/2/position = Vector2( -260, 480 )
nodes/fragment/3/node = SubResource( 2 )
nodes/fragment/3/position = Vector2( -240, 360 )
nodes/fragment/4/node = SubResource( 3 )
nodes/fragment/4/position = Vector2( 140, 280 )
nodes/fragment/connections = PoolIntArray( 2, 0, 4, 2, 3, 0, 4, 0, 4, 0, 0, 0, 4, 0, 0, 7, 4, 0, 0, 5 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 11 )

[node name="RuneTablet" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, -18 )

[node name="Room" parent="." instance=ExtResource( 4 )]
position = Vector2( -8, 3 )

[node name="Effects" type="Control" parent="Room"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Effect" type="CanvasLayer" parent="Room/Effects"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Room/Effects/Effect"]
visible = false
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.243137 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 669, 529 )

[node name="Hud" type="GridContainer" parent="."]
anchor_left = 0.033
anchor_right = 0.053
margin_left = 1336.64
margin_top = 15.0
margin_right = 4789.24
margin_bottom = 2074.0
rect_scale = Vector2( 0.132806, 0.132806 )
custom_constants/hseparation = 459
columns = 2

[node name="TextureRect" type="TextureRect" parent="Hud"]
margin_right = 1024.0
margin_bottom = 1024.0
texture = ExtResource( 7 )
stretch_mode = 5

[node name="CenterContainer2" type="CenterContainer" parent="Hud"]
margin_left = 1483.0
margin_right = 3358.0
margin_bottom = 1024.0

[node name="Health" type="TextureProgress" parent="Hud/CenterContainer2"]
margin_top = 296.0
margin_right = 1875.0
margin_bottom = 728.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="Hud"]
margin_top = 1028.0
margin_right = 1024.0
margin_bottom = 2052.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="Hud"]
margin_left = 1483.0
margin_top = 1028.0
margin_right = 3358.0
margin_bottom = 2052.0

[node name="Mana" type="TextureProgress" parent="Hud/CenterContainer"]
margin_top = 296.0
margin_right = 1875.0
margin_bottom = 728.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 10 )

[node name="VSeparator" type="VSeparator" parent="Hud"]
margin_top = 2056.0
margin_right = 1024.0
margin_bottom = 2059.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 12 )

[connection signal="current_health" from="Player" to="." method="_on_Player_current_health"]
[connection signal="current_mana" from="Player" to="." method="_on_Player_current_mana"]
